# SteelTools

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
cmake/: FindMaya.cmake  GenerateMayaMod.cmake
core/: CMakeLists.txt  SCorneaPush.cpp  SCorneaPush.h  SStickyLips.cpp  SStickyLips.h  devToolsPlayground.cpp
maya/: CMakeLists.txt  CorneaPushNode.cpp  CorneaPushNode.h  DebugUtils.h  MeshUtils.h  SteelMayaCommon.h  StickyLipsNode.cpp  StickyLipsNode.h  miodio.py  pluginMain.cpp  version.txt
maya/docs/: StickyLipsNode.md
maya/installer/windows/: steelToolsInstaller.iss
maya/scripts/: AEsteelStickyLipsTemplate.mel
maya/scripts/steelTools/: __init__.py  commands.py  mesh_utils.py
maya/scripts/steelTools/interface/: docViewer.py  menu.py  settingsHelper.py  sticky_lips_creator.py
scripts/: MayaHottIshReloader.py  MayaPythonReloader.py  MayaReloader.py  StartMaya.py  buildAllMaya.bat
unreal/: CMakeLists.txt
